added fund function, added connection to hardhat local blockchain

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <div id="app">
       <h1>TEST</h1>
 
-      <button>
+      <button id="connect">
         Connect
+      </button>
+
+      <button id="fund">
+        Fund
       </button>
     </div>
     <script type="module" src="/main.js"></script>
