added get balance and withdraw functions, tested with different local networks

--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
       <button id="connect">
         Connect
       </button>
+      <button id="balance">
+        Balance
+      </button>
+
+      <label for="ethAmount">ETH AMOUNT </label>
+      <input id="ethAmount" type="number" />
 
       <button id="fund">
         Fund
+      </button>
+      <button id="withdraw">
+        Withdraw
       </button>
     </div>
     <script type="module" src="/main.js"></script>
